Bug 389359: In print-preview jump-to-page, scale page-position so we arrive at correct spot.  r+sr=roc, a=blocking1.9+